//working on firebaseDB

--- a/app/src/main/res/layout/forgotpassword.xml
+++ b/app/src/main/res/layout/forgotpassword.xml
@@ -10,25 +10,20 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get Recorvery Code"
+        android:text="Recorvery Password"
         android:textSize="30dp"
         android:textColor="#86AD33"
         android:textAlignment="center"/>
 
-    <TextView
-        android:id="@+id/fstTxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="20dp"
-        android:layout_marginTop="250dp"
-        style="@style/TextviewStyle"
-        android:text="Enter Recovery Email" />
+
 
     <EditText
         android:id="@+id/txtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:hint="Recovery Email or phone number"
+
         android:ems="10" />
 
 
