--- a/app/src/main/res/layout/nav_head.xml
+++ b/app/src/main/res/layout/nav_head.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="#6C6D6E"
+    android:background="@drawable/profile"
     android:gravity="bottom"
+    android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round"/>
+        android:layout_width="108dp"
+        android:layout_height="108dp"
+        android:src="@drawable/waterfall" />
 
     <TextView
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:textStyle="bold"
+        android:text="null"
         android:textSize="20dp"
-        android:text="Wisdom"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+        android:textStyle="bold" />
 
 
 </LinearLayout>
