--- a/app/src/main/res/layout/nav_head.xml
+++ b/app/src/main/res/layout/nav_head.xml
@@ -14,11 +14,11 @@
         android:src="@drawable/waterfall" />
 
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/user1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:text="null"
+        android:text="user"
         android:textSize="20dp"
         android:textStyle="bold" />
 
