--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="40dp">
+    android:orientation="vertical"
+    android:paddingLeft="30dp"
+    android:paddingTop="10dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="10dp">
 
-
-
-<LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:theme="@style/AppTheme.NoActionBar">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
 
 <TextView
         android:layout_width="match_parent"
@@ -121,9 +129,14 @@
         android:background="@drawable/round_butwhite"
         android:textColor="#FF0000"/>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            />
 
+    </LinearLayout>
 
+</ScrollView>
 
 </LinearLayout>
 
-</ScrollView>
