--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="edittext">#F7D7C6</color>
+    <color name="colorPrimary1">#101010</color>
+    <color name="colorPrimaryDark1">#101010</color>
 </resources>
