--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -44,6 +44,7 @@
         android:textSize="40dp" />
 
     <Button
+        android:id="@+id/editprobtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit Profile"
