//working on retriving firebase data and implementing google and facebook login //settting fragment in progress //finalizing other fragments

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -11,7 +11,7 @@
         android:textColor="#F1511B"
         style="@style/TextviewStyle"
         android:textAlignment="center"
-        android:text="Location"
+        android:text="Sign IN"
         android:textSize="40dp" />
 
     <TextView
