//working on retriving firebase data and implementing google and facebook login //settting fragment in progress //finalizing other fragments //remember password and email added

--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="40dp"
+    android:theme="@style/AppTheme1"
     >
 
     <TextView
