--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,13 @@
         <!--<item name="android:windowBackground">@drawable/backgroundimg</item>-->
     </style>
 
+    <style name="AppTheme1" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#F44336</item>
+        <item name="colorAccent">#FFFFFF</item>
+        <item name="android:windowBackground">@drawable/back</item>
+    </style>
+
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">#396dbf</item>
         <item name="windowActionBar">true</item>
