--- a/app/src/main/res/layout/forgotpassword.xml
+++ b/app/src/main/res/layout/forgotpassword.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:background="@drawable/menuwal"
     android:padding="40dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
