--- a/app/src/main/res/layout/friends.xml
+++ b/app/src/main/res/layout/friends.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wll"
-    tools:context=".friend">
+    android:background="@drawable/menuwal"
+    tools:context="friendjava">
 
     <ListView
         android:id="@+id/listview1"
         android:layout_width="395dp"
         android:layout_height="715dp"
         tools:layout_editor_absoluteX="8dp"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
