--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:padding="40dp"
     style="@style/AppTheme"
+
     >
     <TextView
         android:id="@+id/textView"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:textColor="#000000"
+        android:textSize="15dp"
         style="@style/TextviewStyle"
         android:text="UserName or Email" />
 
@@ -35,6 +37,7 @@
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:text="Password"
+        android:textSize="15dp"
         style="@style/TextviewStyle"/>
     <EditText
         android:id="@+id/txtPwd"
