--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -7,6 +7,25 @@
     android:background="@drawable/backg"
     >
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="108dp"
+            android:src="@drawable/flogo2" />
+
+    </RelativeLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="40dp" />
+
+
     <TextView
         style="@style/TextviewStyle"
         android:layout_width="match_parent"
@@ -17,9 +36,9 @@
         android:textSize="40dp"
         />
 
-   <Space
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="230dp" />
 
     <Button
         android:id="@+id/firstsigninbtn"
