--- a/app/src/main/res/layout/nav_head.xml
+++ b/app/src/main/res/layout/nav_head.xml
@@ -8,10 +8,14 @@
     android:padding="20dp"
     android:theme="@style/AppTheme.NoActionBar">
 
-    <ImageView
-        android:layout_width="108dp"
-        android:layout_height="108dp"
-        android:src="@drawable/profileimg" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@drawable/profileimg"
+        app:civ_border_color="#FFFFFF"
+        app:civ_border_width="2dp"/>
 
     <TextView
         android:id="@+id/user1"
