--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -22,14 +22,19 @@
 
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="120dp">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/profileimg" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/profile_image"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:src="@drawable/profileimg"
+                app:civ_border_color="#FFFFFF"
+                app:civ_border_width="2dp"/>
+
         </RelativeLayout>
     <Space
         android:layout_width="match_parent"
@@ -51,7 +56,7 @@
         android:layout_height="wrap_content"
         android:text="Edit Profile"
         android:textSize="15dp"
-        android:background="#F9F9F9"
+       android:background="@null"
         android:textColor="#F1511B"
         android:paddingLeft="5dp"/>
     <Space
