--- a/app/src/main/res/layout/friends.xml
+++ b/app/src/main/res/layout/friends.xml
@@ -1,19 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menuwal"
+    android:background="#fff"
     android:padding="30dp"
     tools:context="friendjava">
 
+    <Button
+        android:id="@+id/friendrequestbtn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignTop="@+id/pageTitle"
+        android:layout_alignBottom="@+id/pageTitle"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
+        android:layout_toLeftOf="@+id/pageTitle"
+        android:background="@drawable/add_icon"
+        android:padding="20dp">
+
+    </Button>
+
+    <TextView
+        android:id="@+id/pageTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/faxsans"
+        android:text="Friends List"
+        android:textAlignment="center"
+        android:textColor="#FF6C34"
+        android:textSize="35dp">
+
+
+    </TextView>
+
+    <Button
+        android:id="@+id/addnewfriendBTN"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignTop="@+id/pageTitle"
+        android:layout_alignBottom="@+id/pageTitle"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
+        android:layout_toRightOf="@+id/pageTitle"
+        android:background="@drawable/add_icon"
+        android:padding="20dp">
+
+    </Button>
+
     <ListView
         android:id="@+id/listview1"
-        android:layout_width="395dp"
-        android:layout_height="715dp"
-        tools:layout_editor_absoluteX="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pageTitle"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        android:scrollbars="none"
         tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
+  
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
